@@ -3,6 +3,7 @@
 	New features:
 	-------------
 	+ Export of search results to XLS;
+	+ Added option to clear and export log files;
 
 	Bugfixes / enhancements:
 	------------------------
